error.txt
  File "/home/runner/work/self-heal-CI-CD/self-heal-CI-CD/bug.py", line 8
    print("The perimeter is: " perimeter)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
